feat: cleanup && login, register api
